--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,11 +1,12 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: darkturquoise; height: 1in;">
     <div class="container-fluid">
-      <h2 style="padding-right: 5%;">Dealerships</h2>
+      <h2 style="padding-right: 5%;">Best Cars Dealership</h2>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -25,44 +26,48 @@
     </div>
   </nav>
   
-    <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
-      <div class="banner" name="about-header">
-      <!-- Insert header information here -->
-      </div>
-      <div style="display: flex;flex-direction: row; margin:auto">
+  <div class="card" style="width: 80%; margin: auto; margin-top: 5%;">
+    <div class="banner" name="about-header">
+      <h1>About Us</h1>
+      <p>At Best Cars Dealership, we pride ourselves on delivering exceptional customer service and top-quality vehicles. Based in the heart of North America, our inventory includes a wide range of both domestic and imported cars, ensuring that every customer finds their perfect match at a competitive price.</p>
+      <p>Whether you're looking for a fuel-efficient sedan, a rugged SUV, or a luxury vehicle, we are here to guide you through every step of the car-buying process. Your satisfaction is our priority, and we go the extra mile to ensure it.</p>
+    </div>
+
+    <div style="display: flex; flex-direction: row; justify-content: space-around; margin-top: 2%;">
+      <!-- Person 1 -->
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person.png" alt="CEO Image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <h5 class="title">John Doe</h5>
+          <p><strong>Chief Executive Officer</strong></p>
+          <p class="card-text">John has over 20 years of experience in the automotive industry and has been leading Best Cars Dealership for the past decade. His passion for cars and commitment to customer satisfaction drives the company forward.</p>
+          <p>Email: john.doe@bestcars.com</p>
         </div>
       </div>
 
+      <!-- Person 2 -->
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person.png" alt="Sales Director Image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <h5 class="title">Jane Smith</h5>
+          <p><strong>Director of Sales</strong></p>
+          <p class="card-text">Jane brings a wealth of knowledge in sales strategy and customer relations. She has been instrumental in expanding our dealership's footprint and ensuring that every customer leaves satisfied.</p>
+          <p>Email: jane.smith@bestcars.com</p>
         </div>
       </div>
 
+      <!-- Person 3 -->
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person.png" alt="Service Manager Image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <h5 class="title">Michael Lee</h5>
+          <p><strong>Service Manager</strong></p>
+          <p class="card-text">With a background in mechanical engineering, Michael ensures that every vehicle in our dealership meets the highest quality standards. His expertise guarantees that your car is in perfect condition when you drive off the lot.</p>
+          <p>Email: michael.lee@bestcars.com</p>
         </div>
       </div>
     </div>
-    </div>
-    </div>
-    
+  </div>
 </div>
 
 </html>
